# resume-parser

./: .flake8  .gitignore  .prettierrc.json  CNAME  LICENSE  README.md  asset-manifest.json  index.html
.github/workflows/: deploy-admin-frontend.yaml  deploy-user-frontend.yaml  deploy.yaml
admin-frontend/: .env  package.json
admin-frontend/.github/workflows/: deploy.yml
admin-frontend/public/: index.html
admin-frontend/src/: App.tsx  index.tsx
admin-frontend/src/Components/: Component.tsx
admin-frontend/src/Pages/: Page.tsx
admin-frontend/src/Services/: Service.ts
backend/: app.py  pyproject.toml  spec.yaml
backend/data/models/word2vec/: word2vec.model
backend/data/notebooks/: learning.ipynb  mining.ipynb  preprocessing.ipynb
backend/src/: __init__.py  app.py
backend/src/configs/: __init__.py  flask.py  mongodb.py
backend/src/controllers/: __init__.py  resumes.py  sessions.py  users.py
backend/src/loaders/: __init__.py  configs.py  mongodb.py  routes.py
backend/src/models/: __init__.py  resumes.py  sessions.py  users.py
backend/src/providers/: configs.py  ml.py  mongodb.py  routes.py
backend/src/resumes/: controller.py  model.py  routes.py
backend/src/routes/: resumes.py  sessions.py  users.py
backend/src/sessions/: controller.py  model.py  routes.py
backend/src/users/: controller.py  model.py  routes.py
static/js/: main.61098095.js  main.61098095.js.map  main.930ecfaa.js  main.930ecfaa.js.map
user-frontend/: .env  .eslintrc.json  package.json
user-frontend/public/: index.html
user-frontend/src/: App.tsx  index.tsx
(+31 files in other folders)
